[query-service] do not delete batch instances until service tests finish

--- a/build.yaml
+++ b/build.yaml
@@ -3765,6 +3765,9 @@ steps:
     - test_hailtop_batch_2
     - test_hailtop_batch_3
     - test_hailtop_batch_4
+    - test_hail_python_service_backend_0
+    - test_hail_python_service_backend_1
+    - test_hail_python_service_backend_2
  - kind: runImage
    name: delete_atgu_tables
    image:
