[grafana][auth] add nginx sidecar in front of grafana for tls and auth (#10139)
* [grafana][auth] add nginx sidecar in front of grafana for tls and auth

* use jinja templating instead of bash conditional

--- a/router/deployment.yaml
+++ b/router/deployment.yaml
@@ -263,8 +263,9 @@ metadata:
   name: grafana
 spec:
   ports:
-   - port: 80
-     targetPort: 3000
+   - port: 443
+     protocol: TCP
+     targetPort: 443
   selector:
     app: grafana
 ---
