[linting] add curlylint check for any service that renders jinja2 templates

--- a/address/Makefile
+++ b/address/Makefile
@@ -10,6 +10,7 @@ PYTHON := PYTHONPATH=$(PYTHONPATH) python3
 check:
 	$(PYTHON) -m flake8  --config ../setup.cfg address
 	$(PYTHON) -m pylint --rcfile ../pylintrc address --score=n
+	curlylint .
 
 .PHONY: build
 build:
