--- a/atgu/Makefile
+++ b/atgu/Makefile
@@ -5,4 +5,5 @@ PYTHON := PYTHONPATH=$${PYTHONPATH:+$${PYTHONPATH}:}$(EXTRA_PYTHONPATH) python3
 check:
 	$(PYTHON) -m flake8  --config ../setup.cfg atgu
 	$(PYTHON) -m pylint --rcfile ../pylintrc atgu --score=n
+	curlylint .
 	../check-sql.sh
