--- a/docker/requirements.txt
+++ b/docker/requirements.txt
@@ -9,6 +9,7 @@ async-timeout==3.0.1
 asyncinit==0.2.4
 Authlib==0.11
 black==20.8b1
+curlylint==0.12.0
 decorator==4.4.0
 dictdiffer==0.8.1
 dill>=0.3.1.1,<0.4
