--- a/build.yaml
+++ b/build.yaml
@@ -154,6 +154,10 @@ steps:
    image:
      valueFrom: create_certs_image.image
    script: |
+     until ! kubectl get secret -n {{ default_ns.name }} ssl-config-hail-root
+     do
+         kubectl delete secret -n {{ default_ns.name }} ssl-config-hail-root
+     done
      openssl req -new -x509 -subj /CN=hail-root -nodes -newkey rsa:4096 -keyout hail-root-key.pem -out hail-root-cert.pem
      until kubectl get secret -n {{ default_ns.name }} ssl-config-hail-root
      do
