--- a/build.yaml
+++ b/build.yaml
@@ -154,6 +154,9 @@ steps:
    image:
      valueFrom: create_certs_image.image
    script: |
+     # Create dev certificates, or overwrite the existing ones. The usecase for 
+     # overwriting is to update the dev certificates, that expire after 30 days
+     # (the default `-days` parameter value for `openssl req`).
      until ! kubectl get secret -n {{ default_ns.name }} ssl-config-hail-root 2>/dev/null
      do
          kubectl delete secret -n {{ default_ns.name }} ssl-config-hail-root
