--- a/docker/Dockerfile.service-base
+++ b/docker/Dockerfile.service-base
@@ -10,6 +10,7 @@ COPY hail/python/hailtop /hailtop/hailtop/
 COPY /hail_version /hailtop/hailtop/hail_version
 COPY hail/python/MANIFEST.in /hailtop/MANIFEST.in
 RUN hail-pip-install /hailtop && rm -rf /hailtop
+RUN echo 'from hailtop import version; print(version());' | python3
 
 COPY gear/setup.py /gear/setup.py
 COPY gear/gear /gear/gear/
