--- a/build.yaml
+++ b/build.yaml
@@ -170,7 +170,7 @@ steps:
          kubectl delete secret -n {{ default_ns.name }} ssl-config-hail-root
      done     
      openssl req -new -x509 -subj /CN=hail-root -nodes -newkey rsa:4096 -keyout hail-root-key.pem -out hail-root-cert.pem
-     until kubectl get secret -n {{ default_ns.name }} ssl-config-hail-root
+     until kubectl get secret -n {{ default_ns.name }} ssl-config-hail-root 2>/dev/null
      do
          kubectl create secret generic -n {{ default_ns.name }} ssl-config-hail-root \
                  --from-file=hail-root-key.pem \
