--- a/hail/build.gradle
+++ b/hail/build.gradle
@@ -171,7 +171,7 @@ dependencies {
     bundled group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
 
     // This comes from a local libs directory, see Makefile
-    bundled 'org.elasticsearch:elasticsearch-spark-30_2.12-8.0.0-SNAPSHOT'
+    bundled 'org.elasticsearch:elasticsearch-spark-30_2.12-8.0.0-SNAPSHOT-custom-hail-spark311'
 
     bundled 'com.google.cloud:google-cloud-storage:1.106.0'
 
