--- a/gateway/gateway.nginx.conf
+++ b/gateway/gateway.nginx.conf
@@ -35,7 +35,7 @@ server {
         auth_request /auth;
 
         resolver kube-dns.kube-system.svc.cluster.local;
-        proxy_pass https://router.$namespace.svc.cluster.local;
+        proxy_pass https://$service.$namespace.svc.cluster.local;
 
         proxy_set_header Host $service.internal;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
