--- a/tls/config.yaml
+++ b/tls/config.yaml
@@ -20,6 +20,9 @@ principals:
 - name: notebook
   domain: notebook
   kind: json
+- name: notebook-nginx
+  domain: notebook
+  kind: nginx
 - name: gateway
   domain: gateway
   unmanged: True
