--- a/notebook/nginx.conf
+++ b/notebook/nginx.conf
@@ -60,7 +60,7 @@ http {
 
       location = /auth {
           internal;
-          proxy_pass https://127.0.0.1:5000/auth/$notebook_token;
+          proxy_pass http://127.0.0.1:5000/auth/$notebook_token;
       }
 
 {% if deploy %}
@@ -97,7 +97,7 @@ http {
       }
 
       location / {
-          proxy_pass https://127.0.0.1:5000;
+          proxy_pass http://127.0.0.1:5000;
 
           # don't set Host, notebook dispatches off domain
           proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
@@ -124,7 +124,7 @@ http {
 
       location = /auth {
           internal;
-          proxy_pass https://127.0.0.1:5000/auth/$notebook_token;
+          proxy_pass http://127.0.0.1:5000/auth/$notebook_token;
       }
 
 {% if deploy %}
@@ -161,7 +161,7 @@ http {
       }
 
       location / {
-          proxy_pass https://127.0.0.1:5000;
+          proxy_pass http://127.0.0.1:5000;
 
           # don't set Host, notebook dispatches off domain
           proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
