[gateway] use subdomains to generate server blocks

--- a/gateway/gateway.nginx.conf
+++ b/gateway/gateway.nginx.conf
@@ -65,12 +65,13 @@ server {
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 }
 
+{% for service in subdomains %}
 server {
-    server_name hail.is;
+    server_name {% if service == 'www' %}hail.is{% endif %} {{ service }}.hail.is;
     client_max_body_size 8m;
 
     location / {
-        proxy_pass https://router/;
+        proxy_pass https://{{ service }}/;
 
         proxy_set_header Host $http_host;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -91,6 +92,8 @@ server {
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 }
+
+{% endfor %}
 
 server {
     server_name ukbb-rg.hail.is;
