[router] move Service yaml into their own deployment definitions

--- a/batch/deployment.yaml
+++ b/batch/deployment.yaml
@@ -302,3 +302,31 @@ spec:
   selector:
     matchLabels:
       app: batch
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: batch
+  labels:
+    app: batch
+spec:
+  ports:
+  - port: 443
+    protocol: TCP
+    targetPort: 5000
+  selector:
+    app: batch
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: batch-driver
+  labels:
+    app: batch-driver
+spec:
+  ports:
+  - port: 443
+    protocol: TCP
+    targetPort: 5000
+  selector:
+    app: batch-driver
