--- a/prometheus/prometheus.yaml
+++ b/prometheus/prometheus.yaml
@@ -213,3 +213,15 @@ spec:
         resources:
           requests:
             storage: 50Gi
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: prometheus
+spec:
+  ports:
+   - port: 443
+     protocol: TCP
+     targetPort: 443
+  selector:
+    app: prometheus
