--- a/scorecard/deployment.yaml
+++ b/scorecard/deployment.yaml
@@ -87,3 +87,17 @@ spec:
           secret:
             optional: false
             secretName: asana-access-token
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: scorecard
+  labels:
+    app: scorecard
+spec:
+  ports:
+  - port: 443
+    protocol: TCP
+    targetPort: 5000
+  selector:
+    app: scorecard
