try to fix host header

--- a/notebook/nginx.conf
+++ b/notebook/nginx.conf
@@ -60,7 +60,8 @@ http {
 
       location = /auth {
           internal;
-          proxy_pass http://127.0.0.1:5000/auth/$notebook_token;
+          proxy_pass http://localhost:5000/auth/$notebook_token;
+          proxy_set_header Host $host;
       }
 
 {% if deploy %}
@@ -75,6 +76,7 @@ http {
           proxy_pass http://$auth_pod_ip$request_uri;
 
           include /etc/nginx/proxy.conf;
+          proxy_set_header Host $host;
           proxy_http_version 1.1;
           proxy_redirect off;
           proxy_buffering off;
@@ -97,9 +99,10 @@ http {
       }
 
       location / {
-          proxy_pass http://127.0.0.1:5000;
+          proxy_pass http://localhost:5000;
 
           # don't set Host, notebook dispatches off domain
+          proxy_set_header Host $host;
           proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
           proxy_set_header X-Forwarded-Host  $http_host;
           proxy_set_header X-Forwarded-Proto $scheme;
@@ -124,7 +127,8 @@ http {
 
       location = /auth {
           internal;
-          proxy_pass http://127.0.0.1:5000/auth/$notebook_token;
+          proxy_pass http://localhost:5000/auth/$notebook_token;
+          proxy_set_header Host $host;
       }
 
 {% if deploy %}
@@ -139,6 +143,7 @@ http {
           proxy_pass http://$auth_pod_ip$request_uri;
 
           include /etc/nginx/proxy.conf;
+          proxy_set_header Host $host;
           proxy_http_version 1.1;
           proxy_redirect off;
           proxy_buffering off;
@@ -161,9 +166,10 @@ http {
       }
 
       location / {
-          proxy_pass http://127.0.0.1:5000;
+          proxy_pass http://localhost:5000;
 
           # don't set Host, notebook dispatches off domain
+          proxy_set_header Host $host;
           proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
           proxy_set_header X-Forwarded-Host  $http_host;
           proxy_set_header X-Forwarded-Proto $scheme;
