--- a/tls/config.yaml
+++ b/tls/config.yaml
@@ -17,6 +17,9 @@ principals:
 - name: ci
   domain: ci
   kind: json
+- name: notebook-python
+  domain: notebook
+  kind: json
 - name: notebook
   domain: notebook
   kind: nginx
