--- a/notebook/deployment.yaml
+++ b/notebook/deployment.yaml
@@ -92,6 +92,9 @@ spec:
           - name: sql-config
             mountPath: /sql-config
             readOnly: true
+          - name: ssl-config-notebook-python
+            mountPath: /ssl-config
+            readOnly: true
        - name: nginx
          image: {{ notebook_nginx_image.image }}
          resources:
@@ -129,6 +132,10 @@ spec:
          secret:
            optional: false
            secretName: ssl-config-notebook
+       - name: ssl-config-notebook-python
+         secret:
+           optional: false
+           secretName: ssl-config-notebook-python
 ---
 apiVersion: autoscaling/v2beta1
 kind: HorizontalPodAutoscaler
