--- a/notebook/nginx.conf
+++ b/notebook/nginx.conf
@@ -60,8 +60,7 @@ http {
 
       location = /auth {
           internal;
-          proxy_pass http://localhost:5000/auth/$notebook_token;
-          proxy_set_header Host $host;
+          proxy_pass http://notebook.local:5000/auth/$notebook_token;
       }
 
 {% if deploy %}
@@ -76,7 +75,6 @@ http {
           proxy_pass http://$auth_pod_ip$request_uri;
 
           include /etc/nginx/proxy.conf;
-          proxy_set_header Host $host;
           proxy_http_version 1.1;
           proxy_redirect off;
           proxy_buffering off;
@@ -99,10 +97,9 @@ http {
       }
 
       location / {
-          proxy_pass http://localhost:5000;
+          proxy_pass http://notebook.local:5000;
 
           # don't set Host, notebook dispatches off domain
-          proxy_set_header Host $host;
           proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
           proxy_set_header X-Forwarded-Host  $http_host;
           proxy_set_header X-Forwarded-Proto $scheme;
@@ -127,8 +124,7 @@ http {
 
       location = /auth {
           internal;
-          proxy_pass http://localhost:5000/auth/$notebook_token;
-          proxy_set_header Host $host;
+          proxy_pass http://workshop.local:5000/auth/$notebook_token;
       }
 
 {% if deploy %}
@@ -143,7 +139,6 @@ http {
           proxy_pass http://$auth_pod_ip$request_uri;
 
           include /etc/nginx/proxy.conf;
-          proxy_set_header Host $host;
           proxy_http_version 1.1;
           proxy_redirect off;
           proxy_buffering off;
@@ -166,10 +161,9 @@ http {
       }
 
       location / {
-          proxy_pass http://localhost:5000;
+          proxy_pass http://workshop.local:5000;
 
           # don't set Host, notebook dispatches off domain
-          proxy_set_header Host $host;
           proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
           proxy_set_header X-Forwarded-Host  $http_host;
           proxy_set_header X-Forwarded-Proto $scheme;
