[internal-gateway] explicitly show commented out ssl-config-proxy

--- a/internal-gateway/internal-gateway.nginx.conf
+++ b/internal-gateway/internal-gateway.nginx.conf
@@ -34,6 +34,9 @@ server {
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection $connection_upgrade;
+
+        # we do not verify namespaced services
+        # include /ssl-config/ssl-config-proxy.conf;
     }
 }
 
@@ -87,6 +90,9 @@ server {
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection $connection_upgrade;
+
+        # we do not verify namespaced services
+        # include /ssl-config/ssl-config-proxy.conf;
     }
 }
 
