Conda: make sure gsutil is available on build stage

--- a/conda/hail/meta-template.yaml
+++ b/conda/hail/meta-template.yaml
@@ -20,6 +20,8 @@ requirements:
     - lz4
     - pytest-runner
     - pip
+    - google-cloud-sdk
+    - google-cloud-storage
   run:
     - python
     - openjdk 8.*
