--- a/notebook/nginx.conf
+++ b/notebook/nginx.conf
@@ -60,7 +60,11 @@ http {
 
       location = /auth {
           internal;
+{% if deploy %}
           proxy_pass http://notebook.local:5000/auth/$notebook_token;
+{% else %}
+          proxy_pass http://notebook.local:5000/{{ default_ns.name }}/notebook/auth/$notebook_token;
+{% endif %}
       }
 
 {% if deploy %}
@@ -124,7 +128,11 @@ http {
 
       location = /auth {
           internal;
+{% if deploy %}
           proxy_pass http://workshop.local:5000/auth/$notebook_token;
+{% else %}
+          proxy_pass http://workshop.local:5000/{{ default_ns.name }}/workshop/auth/$notebook_token;
+{% endif %}
       }
 
 {% if deploy %}
