--- a/gateway/gateway.nginx.conf
+++ b/gateway/gateway.nginx.conf
@@ -18,7 +18,17 @@ server {
 }
 
 server {
-    server_name internal.hail.is;
+    listen [::]:443 ssl default_server;
+    listen 443 ssl default_server;
+    server_name _;
+
+    location / {
+        return 400;
+    }
+}
+
+server {
+    server_name internal.{{ domain }};
     client_max_body_size 8m;
 
     location = /auth {
@@ -47,14 +57,14 @@ server {
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection $connection_upgrade;
 
-        # we do not verify namepsaced routers
+        # we do not verify namespaced services
         # include /ssl-config/ssl-config-proxy.conf
     }
 
     error_page 401 = @error401;
 
     location @error401 {
-        return 302 https://auth.hail.is/login?next=https://$http_host$request_uri;
+        return 302 https://auth.{{ domain }}/login?next=https://$http_host$request_uri;
     }
 
     listen [::]:443 ssl;
@@ -66,12 +76,14 @@ server {
 }
 
 {% for service in subdomains %}
+{% if service != 'ukbb-rg' %}  # The only service we don't run in default
 server {
-    server_name {% if service == 'www' %}hail.is{% endif %} {{ service }}.hail.is;
+    server_name {% if service == 'www' %}{{ domain }}{% endif %} {{ service }}.{{ domain }};
     client_max_body_size 8m;
 
     location / {
-        proxy_pass https://{{ service }}/;
+        resolver kube-dns.kube-system.svc.cluster.local;
+        proxy_pass https://{{ service }}.default.svc.cluster.local;
 
         proxy_set_header Host $http_host;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -85,18 +97,19 @@ server {
         include /ssl-config/ssl-config-proxy.conf;
     }
 
-    listen [::]:443 ssl default_server;
-    listen 443 ssl default_server;
+    listen [::]:443 ssl;
+    listen 443 ssl;
     ssl_certificate /etc/letsencrypt/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/privkey.pem;
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 }
 
+{% endif %}
 {% endfor %}
 
 server {
-    server_name ukbb-rg.hail.is;
+    server_name ukbb-rg.{{ domain }};
 
     location /rg_browser {
         proxy_pass http://ukbb-rg-browser.ukbb-rg;
