--- a/letsencrypt/Makefile
+++ b/letsencrypt/Makefile
@@ -21,6 +21,7 @@ start-service:
 DRY_RUN ?= false
 run: push
 	echo $(DOMAIN) > domains.txt.out
+	echo internal.$(DOMAIN) >> domains.txt.out
 	sed 's/$$/.$(DOMAIN)/g' subdomains.txt >> domains.txt.out
 	python3 ../ci/jinja2_render.py '{"letsencrypt_image":{"image":"$(LETSENCRYPT_IMAGE)"},"domain":"$(DOMAIN)","domains":"'$$(paste -s -d, domains.txt.out)'","dry_run":$(DRY_RUN)}' letsencrypt-pod.yaml letsencrypt-pod.yaml.out
 	/bin/bash run-letsencrypt.sh
