--- a/website/deployment.yaml
+++ b/website/deployment.yaml
@@ -110,3 +110,18 @@ spec:
   selector:
     matchLabels:
       app: website
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: www
+  labels:
+    app: www
+spec:
+  ports:
+  - name: https
+    port: 443
+    protocol: TCP
+    targetPort: 5000
+  selector:
+    app: website
