[notebook] Move notebook and workshop nginx to sidecar (#10204)
* [notebook] Move notebook and workshop nginx to sidecar

* [tls] update tls doc

* [notebook] add nginx sidecar to deployment

* add proxy.conf

* move ssl config from python to nginx

* try to fix host header

* add multiple apps to /etc/hosts on the pod

* template auth url

--- a/tls/config.yaml
+++ b/tls/config.yaml
@@ -17,9 +17,12 @@ principals:
 - name: ci
   domain: ci
   kind: json
-- name: notebook
+- name: notebook-python
   domain: notebook
   kind: json
+- name: notebook
+  domain: notebook
+  kind: nginx
 - name: gateway
   domain: gateway
   unmanged: True
