editing docker image file for workshop

--- a/notebook/images/hail/Dockerfile
+++ b/notebook/images/hail/Dockerfile
@@ -5,7 +5,7 @@ USER root
 RUN apt-get update && apt-get install -y \
     openjdk-8-jre-headless \
     && rm -rf /var/lib/apt/lists/*
-USER jovyan
+USER hail_workshop
 
 RUN pip install --use-feature=2020-resolver --upgrade --no-cache-dir \
   jupyter \
@@ -23,4 +23,4 @@ RUN pip install --use-feature=2020-resolver --upgrade --no-cache-dir \
   jupyter nbextension enable --user collapsible_headings/main && \
   jupyter nbextension enable --user move_selected_cells/main
 
-COPY ./resources/ /home/jovyan
+COPY ./resources/ /home/hail_workshop
