--- a/query/deployment.yaml
+++ b/query/deployment.yaml
@@ -94,6 +94,16 @@ spec:
              value: "{{ code.sha }}"
            - name: HAIL_QUERY_WORKER_IMAGE
              value: {{ query_image.image }}
+{% if deploy %}
+           - name: HAIL_QUERY_GCS_BUCKET
+             valueFrom:
+             secretKeyRef:
+               name: global-config
+               key: hail_query_bucket
+{% else %}
+           - name: HAIL_QUERY_GCS_PATH
+             value: gs://hail-test-dmk9z/{{ upload_query_jar.token }}/jars/
+{% endif %}
           ports:
            - containerPort: 5000
           volumeMounts:
