--- a/gateway/gateway.nginx.conf
+++ b/gateway/gateway.nginx.conf
@@ -76,7 +76,7 @@ server {
 }
 
 {% for service in subdomains %}
-{% if service != 'ukbb-rg' %}  # The only service we don't run in default
+{% if service != 'ukbb-rg' %}
 server {
     server_name {% if service == 'www' %}{{ domain }}{% endif %} {{ service }}.{{ domain }};
     client_max_body_size 8m;
